# c-studies

./: .gitignore  CMakeLists.txt  main.c
exercicios/: ex001  ex001.c  ex0012  ex002  ex002.c  ex003  ex003.c  ex004  ex004.c  ex005  ex005.c  ex006  ex006.c  ex007  ex007.c  ex008  ex008.c  ex009  ex009.c  ex010  ex010.c  ex011  ex011.c  ex012.c  ex013  ex013.c  ex014  ex014.c  ex015  ex015.c  ex016  ex016.c  ex017  ex017.c  ex018  ex018.c  ex019  ex019.c  ex020  ex020.c  (+142 more)
