cmake_minimum_required(VERSION 4.0)
project(EstudoC C)

set(CMAKE_C_STANDARD 17)

add_executable(EstudoC main.c
        exercicios/ex001.c
        exercicios/ex002.c
        exercicios/ex003.c
        exercicios/ex004.c
        exercicios/ex005.c
        exercicios/ex006.c
        exercicios/ex007.c
        exercicios/ex008.c
        exercicios/ex009.c
        exercicios/ex010.c
        exercicios/ex011.c
        exercicios/ex0012.c
        exercicios/ex013.c
        exercicios/ex014.c
        exercicios/ex015.c
        exercicios/ex016.c
        exercicios/ex017.c
        exercicios/ex018.c
        exercicios/ex019.c
        exercicios/ex020.c
        exercicios/ex021.c
        exercicios/ex022.c
        exercicios/ex023.c
        exercicios/ex024.c
        exercicios/ex025.c
        exercicios/ex026.c
        exercicios/ex027.c
        exercicios/ex028.c
        exercicios/ex029.c
        exercicios/ex030.c
        exercicios/ex031.c
        exercicios/ex032.c
        exercicios/ex033.c
        exercicios/ex034.c
        exercicios/ex035.c
        exercicios/ex036.c
        exercicios/ex037.c
        exercicios/ex038.c
        exercicios/ex039.c
        exercicios/ex040.c
        exercicios/ex041.c
        exercicios/ex042.c
        exercicios/ex043.c
        exercicios/ex044.c
        exercicios/ex045.c
        exercicios/ex046.c
        exercicios/ex047.c
        exercicios/ex048.c
        exercicios/ex049.c
        exercicios/ex050.c
        exercicios/ex051.c
        exercicios/ex052.c
        exercicios/ex053.c)
