cmake_minimum_required(VERSION 3.22)
project(EstudoC C)

set(CMAKE_C_STANDARD 17)

add_executable(ex001 exercicios/ex001.c)
add_executable(ex002 exercicios/ex002.c)
add_executable(ex003 exercicios/ex003.c)
add_executable(ex004 exercicios/ex004.c)
add_executable(ex005 exercicios/ex005.c)
add_executable(ex006 exercicios/ex006.c)
add_executable(ex007 exercicios/ex007.c)
add_executable(ex008 exercicios/ex008.c)
add_executable(ex009 exercicios/ex009.c)
add_executable(ex010 exercicios/ex010.c)
add_executable(ex011 exercicios/ex011.c)
add_executable(ex012 exercicios/ex012.c)
add_executable(ex013 exercicios/ex013.c)
add_executable(ex014 exercicios/ex014.c)
add_executable(ex015 exercicios/ex015.c)
add_executable(ex016 exercicios/ex016.c)
add_executable(ex017 exercicios/ex017.c)
add_executable(ex018 exercicios/ex018.c)
add_executable(ex019 exercicios/ex019.c)
add_executable(ex020 exercicios/ex020.c)
add_executable(ex021 exercicios/ex021.c)
add_executable(ex022 exercicios/ex022.c)
add_executable(ex023 exercicios/ex023.c)
add_executable(ex024 exercicios/ex024.c)
add_executable(ex025 exercicios/ex025.c)
add_executable(ex026 exercicios/ex026.c)
add_executable(ex027 exercicios/ex027.c)
add_executable(ex028 exercicios/ex028.c)
add_executable(ex029 exercicios/ex029.c)
add_executable(ex030 exercicios/ex030.c)
add_executable(ex031 exercicios/ex031.c)
add_executable(ex032 exercicios/ex032.c)
add_executable(ex033 exercicios/ex033.c)
add_executable(ex034 exercicios/ex034.c)
add_executable(ex035 exercicios/ex035.c)
add_executable(ex036 exercicios/ex036.c)
add_executable(ex037 exercicios/ex037.c)
add_executable(ex038 exercicios/ex038.c)
add_executable(ex039 exercicios/ex039.c)
add_executable(ex040 exercicios/ex040.c)
add_executable(ex041 exercicios/ex041.c)
add_executable(ex042 exercicios/ex042.c)
add_executable(ex043 exercicios/ex043.c)
add_executable(ex044 exercicios/ex044.c)
add_executable(ex045 exercicios/ex045.c)
add_executable(ex046 exercicios/ex046.c)
add_executable(ex047 exercicios/ex047.c)
add_executable(ex048 exercicios/ex048.c)
add_executable(ex049 exercicios/ex049.c)
add_executable(ex050 exercicios/ex050.c)
add_executable(ex051 exercicios/ex051.c)
add_executable(ex052 exercicios/ex052.c)
add_executable(ex053 exercicios/ex053.c)
add_executable(ex054 exercicios/ex054.c)
add_executable(ex055 exercicios/ex055.c)
add_executable(ex056 exercicios/ex056.c)
add_executable(ex057 exercicios/ex057.c)
add_executable(ex058 exercicios/ex058.c)
add_executable(ex059 exercicios/ex059.c)
add_executable(ex060 exercicios/ex060.c)
add_executable(ex061 exercicios/ex061.c)
add_executable(ex062 exercicios/ex062.c)
add_executable(ex063 exercicios/ex063.c)
add_executable(ex064 exercicios/ex064.c)
add_executable(ex065 exercicios/ex065.c)
add_executable(ex066 exercicios/ex066.c)
add_executable(ex067 exercicios/ex067.c)
add_executable(ex068 exercicios/ex068.c)
add_executable(ex069 exercicios/ex069.c)
add_executable(ex070 exercicios/ex070.c)
add_executable(ex071 exercicios/ex071.c)
add_executable(ex072 exercicios/ex072.c)
add_executable(ex073 exercicios/ex073.c)
add_executable(jogo_da_velha exercicios/jogo_da_velha.c)
add_executable(ex074 exercicios/ex074.c)
add_executable(jogo_loto exercicios/jogo_loto.c)
add_executable(ex077 exercicios/ex077.c)
add_executable(ex078 exercicios/ex078.c)
add_executable(ex083 exercicios/ex083.c)
add_executable(ex084 exercicios/ex084.c)
add_executable(ex085 exercicios/ex085.c)
add_executable(ex086 exercicios/ex086.c)
add_executable(ex087 exercicios/ex087.c)
add_executable(ex088 exercicios/ex088.c)
add_executable(ex090 exercicios/ex090.c)
add_executable(ex091 exercicios/ex091.c)
add_executable(ex093 exercicios/ex093.c)
add_executable(ex094 exercicios/ex094.c)
add_executable(ex095 exercicios/ex095.c)
add_executable(ex096 exercicios/ex096.c)
add_executable(ex097 exercicios/ex097.c)
add_executable(ex098 exercicios/ex098.c)
add_executable(ex099 exercicios/ex099.c)
add_executable(ex100 exercicios/ex100.c)
add_executable(ex101 exercicios/ex101.c)
add_executable(ex102 exercicios/ex102.c)
add_executable(ex103 exercicios/ex103.c)
add_executable(ex104 exercicios/ex104.c)
add_executable(ex105 exercicios/ex105.c)
add_executable(ex106 exercicios/ex106.c)
add_executable(ex107 exercicios/ex107.c)
add_executable(ex108 exercicios/ex108.c)
add_executable(ex109 exercicios/ex109.c)
add_executable(ex110 exercicios/ex110.c)
